--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                <h1>Style <br> conference</h1>
             </div>
             <nav class="nav">
-                <span><p>August 24–26th — Chicago, IL</p></span> 
+                <h3><p>August 24–26th — Chicago, IL</p></h3> 
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#">Home</a></li>
                     <li class="nav_item"><a href="#">Speakers</a></li>
